# poisson_binomial

poisson_binomial/: PKG-INFO  README.md  pyproject.toml  setup.py
poisson_binomial/poisson_binomial.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
poisson_binomial/src/: __init__.py
poisson_binomial/src/poisson_binomial.egg-info/: PKG-INFO  SOURCES.txt
