[project]
name = "poisson_binomial"
version = "0.0.2"
authors = [
  { name="Sarah Wooller", email="s.k.wooller@sussex.ac.uk" },
]
description = "methods associated with poisson binomial distribution"
readme = "README.md"
requires-python = ">=3.0"
dependencies = ["numpy","scipy"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
[build-system]
requires = ["setuptools >= 61.0","wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/SarahWooller/poisson_binomial"
Issues = "https://github.com/SarahWooller/poisson_binomial/issues"

[tool.setuptools.packages.find]
where = ["src"]
